// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > should render correctly as a text area with rows 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field1"
    >
      Test Field
    </label>
    <div
      className=""
    >
      <textarea
        className="govuk-textarea w-3/4"
        id="field1"
        maxLength={50}
        name="testField"
        onBlur={[Function]}
        rows={3}
      />
    </div>
  </div>
</div>
`;

exports[`TextInput > should render correctly with errors 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field1"
    >
      Test Field
    </label>
    <div
      className=""
    >
      <input
        className="govuk-input w-3/4"
        id="field1"
        maxLength={50}
        name="testField"
        onBlur={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput > should render correctly with no errors 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field1"
    >
      Test Field
    </label>
    <div
      className=""
    >
      <input
        className="govuk-input w-3/4"
        id="field1"
        maxLength={50}
        name="testField"
        onBlur={[Function]}
        type="text"
      />
    </div>
  </div>
</div>
`;
